Fix pagination overlapping dropdown
On very small screens, the pagination controls could appear below the page select control, the former operlapping the latter. Fixed by moving z-index to the buttons itself.

--- a/src/styles/extends/button-group.scss
+++ b/src/styles/extends/button-group.scss
@@ -2,10 +2,10 @@
 	border-radius: $br;
 	box-shadow: $card-shadow;
 	display: flex;
-	z-index: 1;
 
 	> * + * {
 		@include separator(0, 0, 0, 1);
+		z-index: 0;
 	}
 
 	> :first-child {
